--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>前端练习项目</title>
 </head>
 <body>
-  
+  <h1 style="text-align:center">This is a Test Page!</h1>
+  <p></p>
 </body>
 </html>
