--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <button type="button" 
+              class="navbar-toggle collapsed" 
+              data-toggle="collapse" 
+              data-target="#bs-example-navbar-collapse-1" 
+              aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -36,12 +40,17 @@
             <li><a href="#">Respberry PI </a></li>
             <li><a href="#">Project</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" 
+                  data-toggle="dropdown" role="button" 
+                  aria-haspopup="true" 
+                  aria-expanded="false">More 
+                <span class="caret"></span>
+              </a>
               <ul class="dropdown-menu">
                 <li><a href="#">Life</a></li>
                 <li><a href="#">Photography</a></li>
                 <li role="separator" class="divider"></li>
-                <!-- <li><a href="#">Life</a></li> -->
+                <li><a href="#">Life</a></li>
               </ul>
             </li>
             <li><a href="#">About</a></li>
@@ -49,6 +58,28 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Hello, world!</h1>
+        <p>...</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      </div>
+
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-6 col-md-3">
+          <a href="./page/时钟 v1.1.html" class="thumbnail" target="_blank">
+            <img src="http://www.ay1.cc/img?w=171&h=180" alt="...">
+            时钟demo
+          </a>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 
 
