--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
+        <div class="navbar-header mynav">
           <button type="button" 
               class="navbar-toggle collapsed" 
               data-toggle="collapse" 
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">zhuang'web</a>
+          <a class="navbar-brand logo" href="#">zhuang'web</a>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,6 +39,7 @@
             <li><a href="#">Linux</a></li>
             <li><a href="#">Respberry PI </a></li>
             <li><a href="#">Project</a></li>
+            <li><a href="#">About</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" 
                   data-toggle="dropdown" role="button" 
@@ -53,22 +54,14 @@
                 <li><a href="#">Life</a></li>
               </ul>
             </li>
-            <li><a href="#">About</a></li>
+
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="container">
-      <div class="jumbotron">
-        <h1>Hello, world!</h1>
-        <p>...</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-      </div>
 
-    </div>
-
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col-xs-6 col-md-3">
           <a href="./page/时钟 v1.1.html" class="thumbnail" target="_blank">
@@ -77,9 +70,268 @@
           </a>
         </div>
       </div>
+    </div> -->
+
+
+  </div>
+  <div class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png"  alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <img src="./img/a.png" alt="...">
+            <div class="caption">
+              <h3>Thumbnail label</h3>
+              <p>Cras justo odio, dapibus ac facilisis in, 
+                egestas eget quam. Donec id elit non mi 
+                porta gravida at eget metus. 
+                Nullam id dolor idnibh ultricies 
+                vehicula ut id elit.</p>
+              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+            </div>
+          </div>
+        </div>
+        
+      </div>
     </div>
-
-
   </div>
 
 
