--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand logo" href="#">zhuang'web</a>
+          <a class="navbar-brand logo" href="#">
+            zhuang'web
+          </a>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
