--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <h3>Thumbnail label</h3>
               <p>Cras justo odio, dapibus ac facilisis in, 
                 egestas eget quam. Donec id elit non mi 
-                porta gravida at eget metus. 
+                porta gravida at egt metus. 
                 Nullam id dolor idnibh ultricies 
                 vehicula ut id elit.</p>
               <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
