--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
 
   <script src="./lib/jquery/jquery.js"></script>
   <script src="./lib/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
